@@ -1,8 +1,3 @@
-# André Erdmann <dywi@mailerd.de> (14 Nov 2014)
-# Old ebuilds. Masked for removal in 30 days.
-=app-laptop/tlp-0.5
-=app-laptop/tlp-0.5-r2
-
 # André Erdmann <dywi@mailerd.de> (15 Sep 2014)
 # ebuild builds against two live repos
 =app-laptop/tlp-9999
