@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> -tlp-0.5.ebuild,
+  -tlp-0.5-r2.ebuild:
+  Remove old ebuilds.
+
 *tlp-0.7 (01 Feb 2015)
   01 Feb 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.7.ebuild:
   Latest upstream release.
